changes in  the card carousels

--- a/index.html
+++ b/index.html
@@ -449,93 +449,73 @@
   <!-- OUR SERVICES -->
 
   <div class="container-fluid ourservices" id="ourservices">
-    <!-- <h1 class="text-center">Our services</h1>
-    <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6> -->
-
-    <div id="carouselExampleControls" class="carousel carousel-dark slide col-lg-12 col-sm-12 col-md-12"
-      data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active  col-lg-12 col-sm-12 col-md-12">
-          <div class="card-wrapper container-sm d-flex   justify-content-around">
-            <!--  FIRST CARD -->
-            <div class="service-div col-12 col-md-4">
-              <div class="card ">
+        <div class="carousel-item active">
+          <div class="card-wrapper container d-flex justify-content-center">
+            <!-- FIRST CARD -->
+            <div class="service-div col-12 col-md-6 col-lg-4">
+              <div class="card">
                 <div class="card-body ourservicesfirstcard">
                   <img src="assets/img/card1.png" class="img-fluid" alt="card">
                   <h5 class="card-title">Aesthetic Gynecology</h5>
-                  <p class="card-text pb-2">Our clinic specializes in aesthetic gynecology treatments to improve
-                    intimate
-                    Well-being. Whether you Want Vaginal rejuvenation, labiaplasty, or another cosmetic procedure, our
-                    experts are here to help.</p>
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <p class="card-text pb-2">Our clinic specializes in aesthetic gynecology treatments to improve intimate Well-being. Whether you Want Vaginal rejuvenation, labiaplasty, or another cosmetic procedure, our experts are here to help.</p>
                 </div>
               </div>
             </div>
-            <!--  SECOND CARD -->
-            <div class="service-div col-12 col-md-4">
-              <div class="card ">
+            <!-- SECOND CARD -->
+            <div class="service-div col-12 col-md-6 col-lg-4">
+              <div class="card">
                 <div class="card-body ourservicessecondcard">
                   <img src="assets/img/card3.png" alt="card3">
                   <h5 class="card-title">Experienced Team </h5>
-                  <p class="card-text pb-5 mb-5">Our highly trained and compassionate team of gynecologists and plastic
-                    surgeons have years of experience providing safe and effective procedures.</p>
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <p class="card-text pb-5 mb-5">Our highly trained and compassionate team of gynecologists and plastic surgeons have years of experience providing safe and effective procedures.</p>
                 </div>
               </div>
             </div>
-            <!--  THIRD  CARD -->
-            <div class="service-div col-12 col-md-4">
-              <div class="card ">
+            <!-- THIRD CARD -->
+            <div class="service-div col-12 col-md-6 col-lg-4">
+              <div class="card">
                 <div class="card-body ourservicesthirdcard p-5">
                   <img src="assets/img/card2.png" alt="card2">
                   <h5 class="card-title">State-of-the-art-Technology</h5>
-                  <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology and
-                    equipment to ensure comfort and satisfaction during your treatment.</p>
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology and equipment to ensure comfort and satisfaction during your treatment.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="carousel-item  col-lg-12 col-sm-12 col-md-12">
-          <div class="card-wrapper container-sm d-flex   justify-content-around">
-            <!--  FOURTH  CARD -->
-            <div class="service-div col-12 col-md-4">
-              <div class="card ">
+        <!-- Second Carousel Item -->
+        <div class="carousel-item">
+          <div class="card-wrapper container d-flex justify-content-center">
+            <!-- FOURTH CARD -->
+            <div class="service-div col-12 col-md-6 col-lg-4">
+              <div class="card">
                 <div class="card-body ourservicesfirstcard">
                   <img src="assets/img/card2.png" alt="card2">
-                  <h5 class="card-title">Pleasent Environment</h5>
-                  <p class="card-text"> We understand the delicate nature of cosmetic gynecological procedures and our
-                    clinic offers a warm, friendly and discreet environment in which you can feel comfortable.
-                  </p>
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <h5 class="card-title">Pleasant Environment</h5>
+                  <p class="card-text"> We understand the delicate nature of cosmetic gynecological procedures and our clinic offers a warm, friendly and discreet environment in which you can feel comfortable.</p>
                 </div>
               </div>
             </div>
-            <!--  FIFTH  CARD -->
-            <div class="service-div col-12 col-md-4">
-              <div class="card ">
+            <!-- FIFTH CARD -->
+            <div class="service-div col-12 col-md-6 col-lg-4">
+              <div class="card">
                 <div class="card-body ourservicessecondcard">
                   <img src="assets/img/card2.png" alt="card2">
                   <h5 class="card-title">Personal support</h5>
-                  <p class="card-text">TYour goals and concerns are our top priority. We take the time to understand
-                    your
-                    specific needs and create customized treatment plans to achieve the results you desire. Cosmetic
-                    Gynecology at Aruna Hospital Couples Clinics, we are proud to be at the forefront of
-                    Cosmetic Gynecology in Kakinada. </p>
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <!-- <p class="card-text">Your goals and concerns are our top priority. We take the time to understand your specific needs and create customized treatment plans to achieve the results you desire. Cosmetic Gynecology at Aruna Hospital Couples Clinics, we are proud to be at the forefront of Cosmetic Gynecology in Kakinada.</p> -->
+                  <p class="card-text">Experience personalized cosmetic gynecology at Aruna Hospital Couples Clinics, Kakinada's leader in the field. Our tailored treatments prioritize your goals for optimal results.</p>
                 </div>
               </div>
             </div>
-            <!--  SIXTH  CARD -->
-            <div class="service-div col-12 col-md-4">
-              <div class="card ">
+            <!-- SIXTH CARD -->
+            <div class="service-div col-12 col-md-6 col-lg-4">
+              <div class="card">
                 <div class="card-body ourservicesthirdcard">
                   <img src="assets/img/card2.png" alt="card2">
                   <h5 class="card-title">State-of-the-art-Technology</h5>
-                  <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology and
-                    equipment to ensure comfort and satisfaction during your treatment.</p>
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology and equipment to ensure comfort and satisfaction during your treatment.</p>
                 </div>
               </div>
             </div>
@@ -554,6 +534,7 @@
       </button>
     </div>
   </div>
+  
 
   <!-- ENDING  OUR SERVICES -->
 
