--- a/gallery.html
+++ b/gallery.html
@@ -158,7 +158,7 @@
                   
                 </div>
                 <div class="col-lg-4 col-sm-12 col-md-12 mb-5">
-                  <!-- <img src="assets/img/galleryimg9.jpeg"  class="img-fluid" alt=""> -->
+                  <img  src="assets/img/webp/Gallery_image_eight.jpg"   class="img-fluid" alt="">
                 </div>
             </div>
         </div>
