--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <meta name="description" content=" We provide the best sex problems treatment in kakinada at Aruna Couples Clinic. Our specialist doctors are dedicated to resolving relationship challenges effectively.">
 
+  
   <meta name="keywords" content="Best couples clinic in kakinada,
   Best couples clinic near me,
   Best cosmetic gynecology hospital in kakinada,
@@ -425,7 +426,7 @@
     <div class="container areyoulooking">
       <div class="row">
         <div class="col-lg-6 col-sm-12 col-md-12">
-          <img src="assets/img/webp/Best_Cosmetic_Gynecology_aruna_couples_clinic.webp" class="img-fluid" alt="gynecological">
+          <img src="assets/img/best_female_surgery_couples_clinic.png" class="img-fluid" alt="gynecological">
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12 p-5 mt-5">
           <h1 class="mb-3 pt-3">Are you looking for the <br>
@@ -590,7 +591,7 @@
           <a href="about.html" class="btn btn-primary" id="button">know more</a>
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12">
-          <img src="assets/img/webp/leading_cosmetic_gynecology_hospital_in_kakinada_aruna_couples_clinic.webp" class="img-fluid" alt="cosmetic_gynecology">
+          <img src="assets/img/best_female_non_surgery_couples_clinic.png" class="img-fluid" alt="cosmetic_gynecology">
         </div>
       </div>
     </div>
