changing services paths

--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -164,7 +164,7 @@ Best  HIFEM chair treatment hospital in kakinada,
   <!--  ENDING  MAIN SECTION -->
 
 <!--  Focused Extracorporeal Shock wave Therapy   -->
-<section id="focused-extracorporeal-shock-wave-therapy">
+<section id="focused-extracorporeal-shock-wave-therapy_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">Focused Extracorporeal Shock wave Therapy  </h3>
@@ -190,7 +190,7 @@ Best  HIFEM chair treatment hospital in kakinada,
 <!--  ENDING   Focused Extracorporeal Shock wave Therapy  -->
 
 <!--  HIFEM Chair ( Emsella Chair )  -->
-<section id="hifem-chair">
+<section id="hifem-chair_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">HIFEM Chair</h3>
@@ -215,7 +215,7 @@ Best  HIFEM chair treatment hospital in kakinada,
 <!--  ENDING  LABIOMINORAPLASTY -->
 
 <!--  P-SHOT -->
-<section id="p-shot">
+<section id="p-shot_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5"> P-Shot  </h3>
