--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -194,7 +194,7 @@
 
 <!-- VAGINAL REJUVENATION -->
 
-<section   id="vaginal-rejuvenation">
+<section   id="vaginal-rejuvenation_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">VAGINAL REJUVENATION</h3>
@@ -219,7 +219,7 @@
 
 <!--  URINARY INCONTINENCE -->
 
-<section   id="urinary-incontinence">
+<section   id="urinary-incontinence_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">URINARY INCONTINENCE</h3>
@@ -241,7 +241,7 @@
 <!--  ENDING  URINARY INCONTINENCE -->
 
 <!--  VAGINAL DRYNESS AND INFECTION  -->
-<section  id="vaginal-dryness-and-infection">
+<section  id="vaginal-dryness-and-infection_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3" >VAGINAL DRYNESS AND INFECTION </h3>
@@ -270,7 +270,7 @@
 
 <!-- VAGINAL  DISCHARGE -->
 
-<section   id="vaginal-discharge">
+<section   id="vaginal-discharge_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">VAGINAL  DISCHARGE</h3>
@@ -295,7 +295,7 @@
 
 <!-- POST DELIVERY REHABILITATION -->
 
-<section id="post-delivery-rehabilitation">
+<section id="post-delivery-rehabilitation_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">POST DELIVERY REHABILITATION</h3>
@@ -325,7 +325,7 @@
 
 <!--  G-SHOT -->
 
-<section  id="g-shot">
+<section  id="g-shot_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3"> G-SHOT </h3>
@@ -351,7 +351,7 @@
 
 <!-- O-SHOT -->
 
-<section id="o-shot">
+<section id="o-shot_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">O-SHOT </h3>
@@ -380,7 +380,7 @@
 
 <!-- Female Sexual Dysfunction -->
 
-<section  id="female-sexual-dysfunction">
+<section  id="female-sexual-dysfunction_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">FEMALE SEXUAL DYSFUNCTION</h3>
@@ -405,7 +405,7 @@
 
 <!--  LASER HAIR REDUCTION -->
 
-<section id="laser-hair-reduction">
+<section id="laser-hair-reduction_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3"> LASER HAIR REDUCTION </h3>
@@ -427,7 +427,7 @@
 
 <!-- BIKINI LASER HAIR REMOVAL -->
 
-<section id="bikini-laser-hair-removal">
+<section id="bikini-laser-hair-removal_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">BIKINI LASER HAIR REMOVAL</h3>
@@ -451,7 +451,7 @@
 
 <!-- VULVA HAIR REDUCTION -->
 
-<section id="vulva-hair-reduction">
+<section id="vulva-hair-reduction_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">VULVA HAIR REDUCTION</h3>
@@ -498,7 +498,7 @@
 
 <!-- STRECH MARK MANAGEMENT -->
 
-<section id="strech-mark-management">
+<section id="strech-mark-management_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3"> STRETCH MARK MANAGEMENT </h3>
@@ -523,7 +523,7 @@
 
 <!-- BREAST SAGGING -->
 
-<section id="breast-sagging">
+<section id="breast-sagging_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">BREAST SAGGING</h3>
@@ -549,7 +549,7 @@
 
 <!-- FACIAL REJUVENATION-->
 
-<section id="facial-rejuvenation">
+<section id="facial-rejuvenation_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">FACIAL REJUVENATION</h3>
@@ -598,7 +598,7 @@
 
 <!-- HAIR LOSS TREATMENTS -->
 
-<section id="hair-loss-treatments">
+<section id="hair-loss-treatments_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">HAIR LOSS TREATMENTS</h3>
@@ -621,7 +621,7 @@
 
 <!-- PRP -->
 
-<section id="prp">
+<section id="prp_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">PRP</h3>
@@ -644,7 +644,7 @@
 
 <!-- MOMMY MAKE OVER -->
 
-<section id="mommy-make-over">
+<section id="mommy-make-over_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">MOMMY MAKE OVER</h3>
@@ -667,7 +667,7 @@
 
 <!-- UNDERARM PEELS -->
 
-<section id="under-arm-peels">
+<section id="under-arm-peels_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">UNDERARM PEELS</h3>
@@ -713,7 +713,7 @@
 
 <!--   HOLLYWOOD FACIAL -->
 
-<section id="hollywood-facial">
+<section id="hollywood-facial_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">HOLLYWOOD FACIAL</h3>
@@ -735,7 +735,7 @@
 
 <!--   MEDI FACIAL -->
 
-<section id="medi-facial">
+<section id="medi-facial_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">MEDI FACIAL</h3>
@@ -758,7 +758,7 @@
 
 <!--  HAND AND FEET REJUVENATION -->
 
-<section id="hand-and-feet-rejuvenation">
+<section id="hand-and-feet-rejuvenation_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">HAND AND FEET REJUVENATION</h3>
@@ -781,7 +781,7 @@
 
 <!-- TATTOO REMOVAL -->
 
-<section id="tattoo-removal">
+<section id="tattoo-removal_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">TATTOO REMOVAL</h3>
@@ -804,7 +804,7 @@
 
 <!-- MENOPAUSE -->
 
-<section id="menopause">
+<section id="menopause_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3">MENOPAUSE</h3>
@@ -827,7 +827,7 @@
 
 <!-- ANKLE SCAR MANAGEMENT -->
 
-<section id="ankle-scar-management">
+<section id="ankle-scar-management_in_kakinada">
   <div class="container mb-5">
       <div class="row"> 
           <h3 class="pb-3"> SCAR MANAGEMENT </h3>
@@ -940,7 +940,7 @@
   </footer>
 
    <!-- ENDING  FOOTER -->
-   <div class="footer-area-bottom theme-bg pt-3"  style="background-color: #00527E;">
+  <div class="footer-area-bottom theme-bg pt-3"  style="background-color: #00527E;">
     <div class="container">
        <div class="row">
           <div class="col-xl-8 col-lg-8 col-md-12 col-12">
@@ -958,14 +958,14 @@
           </div>
        </div>
     </div>
- </div>
+  </div>
 
 <!--  scroll down menu -->
   <div class="circle-icon-container">
     <div class="circle-icon">
     <a href="#main_img" class="circle-icon "  ><i class="bi bi-arrow-up-circle-fill"></i></a>
     </div>
-    </div>
+  </div>
 
 
 </body>
