--- a/index.html
+++ b/index.html
@@ -625,40 +625,40 @@
                       <div class="row">
                         <div class="col-lg-6">
                           <!-- <li>Vaginal Rejuvenation</li> -->
-                          <li><a href="femalenonsurgical.html#vaginal-rejuvenation">Vaginal Rejuvenation</a></li>
-                          <li><a href="femalenonsurgical.html#urinary-incontinence">Urinary Incontinence</a></li>
-                          <li><a href="femalenonsurgical.html#vaginal-dryness-and-infection">Vaginal Dryness &
+                          <li><a href="femalenonsurgical.html#vaginal-rejuvenation_in_kakinada">Vaginal Rejuvenation</a></li>
+                          <li><a href="femalenonsurgical.html#urinary-incontinence_in_kakinada">Urinary Incontinence</a></li>
+                          <li><a href="femalenonsurgical.html#vaginal-dryness-and-infection_in_kakinada">Vaginal Dryness &
                               Infection</a></li>
-                          <li><a href="femalenonsurgical.html#vaginal-discharge">Vaginal Discharge </a></li>
-                          <li><a href="femalenonsurgical.html#post-delivery-rehabilitation"> Post Delivery
+                          <li><a href="femalenonsurgical.html#vaginal-discharge_in_kakinada">Vaginal Discharge </a></li>
+                          <li><a href="femalenonsurgical.html#post-delivery-rehabilitation_in_kakinada"> Post Delivery
                               Rehabilitation </a></li>
-                          <li><a href="femalenonsurgical.html#g-shot">G-Shot </a></li>
-                          <li><a href="femalenonsurgical.html#o-shot"> O-Shot </a></li>
-                          <li><a href="femalenonsurgical.html#female-sexual-dysfunction">Female Sexual Dysfunction </a>
+                          <li><a href="femalenonsurgical.html#g-shot_in_kakinada">G-Shot </a></li>
+                          <li><a href="femalenonsurgical.html#o-shot_in_kakinada"> O-Shot </a></li>
+                          <li><a href="femalenonsurgical.html#female-sexual-dysfunction_in_kakinada">Female Sexual Dysfunction </a>
                           </li>
-                          <li><a href="femalenonsurgical.html#laser-hair-reduction">Laser Hair Reduction</a></li>
-                          <li> <a href="femalenonsurgical.html#bikini-laser-hair-removal"> Bikini Laser Hair Removal
+                          <li><a href="femalenonsurgical.html#laser-hair-reduction_in_kakinada">Laser Hair Reduction</a></li>
+                          <li> <a href="femalenonsurgical.html#bikini-laser-hair-removal_in_kakinada"> Bikini Laser Hair Removal
                             </a></li>
-                          <li><a href="femalenonsurgical.html#vulva-hair-reduction">Vulva Hair Reduction </a></li>
+                          <li><a href="femalenonsurgical.html#vulva-hair-reduction_in_kakinada">Vulva Hair Reduction </a></li>
                           <!-- <li><a href="femalenonsurgical.html#senatine-peels"> Senatine Peels </a> </li> -->
-                          <li><a href="femalenonsurgical.html#strech-mark-management">Stretch Mark Management </a></li>
+                          <li><a href="femalenonsurgical.html#strech-mark-management_in_kakinada">Stretch Mark Management </a></li>
                         </div>
                         <div class="col-lg-6">
-                          <li><a href="femalenonsurgical.html#breast-sagging">Breast Sagging </a></li>
-                          <li><a href="femalenonsurgical.html#facial-rejuvenation">Facial </a>Rejuvenation</li>
+                          <li><a href="femalenonsurgical.html#breast-sagging_in_kakinada">Breast Sagging </a></li>
+                          <li><a href="femalenonsurgical.html#facial-rejuvenation_in_kakinada">Facial </a>Rejuvenation</li>
                           <!-- <li> <a href="femalenonsurgical.html#melasma">Melasma </a></li> -->
-                          <li><a href="femalenonsurgical.html#hair-loss-treatments">Hair Loss Treatments </a></li>
-                          <li><a href="femalenonsurgical.html#prp">PRP </a></li>
-                          <li><a href="femalenonsurgical.html#mommy-make-over">Mommy Make Over </a></li>
-                          <li><a href="femalenonsurgical.html#under-arm-peels">Underarm Peels </a></li>
+                          <li><a href="femalenonsurgical.html#hair-loss-treatments_in_kakinada">Hair Loss Treatments </a></li>
+                          <li><a href="femalenonsurgical.html#prp_in_kakinada">PRP </a></li>
+                          <li><a href="femalenonsurgical.html#mommy-make-over_in_kakinada">Mommy Make Over </a></li>
+                          <li><a href="femalenonsurgical.html#under-arm-peels_in_kakinada">Underarm Peels </a></li>
                           <!-- <li><a href="femalenonsurgical.html#body-peels">Body Peels </a> </li> -->
-                          <li><a href="femalenonsurgical.html#hollywood-facial">Hollywood Facial</a> </li>
-                          <li><a href="femalenonsurgical.html#medi-facial">Medi Facial </a> </li>
-                          <li><a href="femalenonsurgical.html#hand-and-feet-rejuvenation">Hand and Feet Rejuvenation
+                          <li><a href="femalenonsurgical.html#hollywood-facial_in_kakinada">Hollywood Facial</a> </li>
+                          <li><a href="femalenonsurgical.html#medi-facial_in_kakinada">Medi Facial </a> </li>
+                          <li><a href="femalenonsurgical.html#hand-and-feet-rejuvenation_in_kakinada">Hand and Feet Rejuvenation
                             </a> </li>
-                          <li><a href="femalenonsurgical.html#tattoo-removal">Tattoo Removal </a></li>
-                          <li><a href="femalenonsurgical.html#menopause">Menopause </a> </li>
-                          <li><a href="femalenonsurgical.html#ankle-scar-management">Scar Management</a> </li>
+                          <li><a href="femalenonsurgical.html#tattoo-removal_in_kakinada">Tattoo Removal </a></li>
+                          <li><a href="femalenonsurgical.html#menopause_in_kakinada">Menopause </a> </li>
+                          <li><a href="femalenonsurgical.html#ankle-scar-management_in_kakinada">Scar Management</a> </li>
                         </div>
                       </div>
                     </div>
@@ -678,12 +678,12 @@
                 <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingTwo">
                   <div class="accordion-body" style="background-color: #046BA3; color: #ffff;">
-                    <li><a href="femalesurgical.html#hymenoplasty">Hymenoplasty</a></li>
-                    <li><a href="femalesurgical.html#labiominoraplasty">Labiominoraplasty</a></li>
-                    <li><a href="femalesurgical.html#labiomajoraplasty">Labiomajoraplasty</a></li>
-                    <li><a href="femalesurgical.html#clitoral-hood-reduction">Clitoral hood reduction</a></li>
-                    <li><a href="femalesurgical.html#clitoral-unhooding">Clitoral unhooding</a></li>
-                    <li><a href="femalesurgical.html#monsplaty">Monsplasty </a></li>
+                    <li><a href="femalesurgical.html#hymenoplasty_in_kakinada">Hymenoplasty</a></li>
+                    <li><a href="femalesurgical.html#labiominoraplasty_in_kakinada">Labiominoraplasty</a></li>
+                    <li><a href="femalesurgical.html#labiomajoraplasty_in_kakinada">Labiomajoraplasty</a></li>
+                    <li><a href="femalesurgical.html#clitoral-hood-reduction_in_kakinada">Clitoral hood reduction</a></li>
+                    <li><a href="femalesurgical.html#clitoral-unhooding_in_kakinada">Clitoral unhooding</a></li>
+                    <li><a href="femalesurgical.html#monsplaty_in_kakinada">Monsplasty </a></li>
                     <a href="femalesurgical.html" class="btn btn-dark mt-3 mb-3">Click Here</a>
                   </div>
                 </div>
@@ -700,9 +700,9 @@
                 <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingThree">
                   <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
-                    <li><a href="male.html#erectile-dysfunction">Erectile Dysfunction</a></li>
-                    <li><a href="male.html#urine-incontinence">Urine Incontinence</a></li>
-                    <li><a href="male.html#premature-ejaculation">Premature Ejaculation</a></li>
+                    <li><a href="male.html#erectile-dysfunction_in_kakinada">Erectile Dysfunction</a></li>
+                    <li><a href="male.html#urine-incontinence_in_kakinada">Urine Incontinence</a></li>
+                    <li><a href="male.html#premature-ejaculation_in_kakinada">Premature Ejaculation</a></li>
                     <a href="male.html" class="btn btn-dark mt-3 mb-3 ">Click Here</a>
                   </div>
                 </div>
@@ -720,10 +720,10 @@
                   aria-labelledby="panelsStayOpen-headingFour">
                   <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
 
-                    <li><a href="ExectileDysfunctionProcedure.html#focused-extracorporeal-shock-wave-therapy">Focused
+                    <li><a href="ExectileDysfunctionProcedure.html#focused-extracorporeal-shock-wave-therapy_in_kakinada">Focused
                         Extracorporeal Shockwave Therapy</a></li>
-                    <li><a href="ExectileDysfunctionProcedure.html#hifem-chair">HIFEM Chair (Emsella Chair)</a></li>
-                    <li><a href="ExectileDysfunctionProcedure.html#p-shot">P-Shot</a></li>
+                    <li><a href="ExectileDysfunctionProcedure.html#hifem-chair_in_kakinada">HIFEM Chair (Emsella Chair)</a></li>
+                    <li><a href="ExectileDysfunctionProcedure.html#p-shot_in_kakinada">P-Shot</a></li>
                     <a href="ExectileDysfunctionProcedure.html" class="btn btn-dark mt-3 mb-3 ">Click Here</a>
                   </div>
                 </div>
