--- a/male.html
+++ b/male.html
@@ -171,7 +171,7 @@
 
 <!--  MAIN SECTION -->
 
-<section  >
+<section>
   <div class="container-fluid mb-5 mt-5">
       <div class="row"> 
           <h3 class="pb-3">MALE  SERVICES</h3>
@@ -186,7 +186,7 @@
 
 <!--  Erectile Dysfunction  -->
 
-<section id="erectile-dysfunction">
+<section id="erectile-dysfunction_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">Erectile Dysfunction </h3> 
@@ -213,7 +213,7 @@
 
 <!--  Urine Incontinence  -->
 
-<section id="urine-incontinence">
+<section id="urine-incontinence_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
               <h3 class="pb-5">Urine Incontinence </h3>
@@ -240,7 +240,7 @@
 
 <!--  Premature Ejaculation   -->
 
-<section id="premature-ejaculation">
+<section id="premature-ejaculation_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">Premature Ejaculation  </h3>
@@ -357,7 +357,7 @@
    <!-- ENDING  FOOTER -->
 
 
-   <div class="footer-area-bottom theme-bg pt-3"  style="background-color: #00527E;">
+<div class="footer-area-bottom theme-bg pt-3"  style="background-color: #00527E;">
     <div class="container">
        <div class="row">
           <div class="col-xl-8 col-lg-8 col-md-12 col-12">
@@ -375,7 +375,7 @@
           </div>
        </div>
     </div>
- </div>
+</div>
 
 
 
@@ -385,7 +385,7 @@
     <div class="circle-icon">
     <a href="#main_img" class="circle-icon "  ><i class="bi bi-arrow-up-circle-fill"></i></a>
     </div>
-    </div>
+  </div>
 
 
 </body>
