--- a/femalesurgical.html
+++ b/femalesurgical.html
@@ -173,7 +173,7 @@
 
 <!--  HYMENOPLASTY -->
 
-<section id="hymenoplasty">
+<section id="hymenoplasty_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">HYMENOPLASTY</h3>
@@ -199,7 +199,7 @@
 
 <!--  LABIOMINORAPLASTY -->
 
-<section  id="labiominoraplasty">
+<section  id="labiominoraplasty_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3" >LABIOMINORAPLASTY</h3>
@@ -225,7 +225,7 @@
 
 <!--  LABIOMAJORAPLASTY  -->
 
-<section  id="labiomajoraplasty">
+<section  id="labiomajoraplasty_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">LABIOMAJORAPLASTY </h3>
@@ -250,7 +250,7 @@
 
 <!--  CLITORAL HOOD REDUCTION   -->
 
-<section id="clitoral-hood-reduction">
+<section id="clitoral-hood-reduction_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3"> CLITORAL HOOD REDUCTION  </h3>
@@ -276,7 +276,7 @@
 
 <!--  CLITORAL UNHOODING  -->
 
-<section id="clitoral-unhooding">
+<section id="clitoral-unhooding_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">CLITORAL UNHOODING </h3>
@@ -304,7 +304,7 @@
 
 <!--  MONSPLATY  -->
 
-<section id="monsplaty">
+<section id="monsplaty_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3"> MONSPLASTY </h3>
