--- a/appointment.html
+++ b/appointment.html
@@ -148,6 +148,28 @@
             </div>
         </div>
     </section>
+    <div class="footer-area-bottom theme-bg pt-3 mt-5" style="background-color: #00527E;">
+      <div class="container">
+        <div class="row d-flex align-items-center">
+          <div class="col-md-6 col-12">
+            <div class="footer-widget__copyright-info">
+            <p class="last_text mb-0">
+              <a href="terms.html" style="text-decoration: none; color: #ffffff;">Terms & Conditions</a>
+              <a href="privacy.html" style="text-decoration: none; color: #ffffff;">Privacy & Policy</a>
+            </p>
+            </div>
+          </div>
+          <div class="col-md-6 col-12 d-flex justify-content-end align-items-center">
+            <a href="https://bhavicreations.com/" target="_blank" style="text-decoration: none; color: #ffffff; display: flex; align-items: center;">
+            <p class="mini_text last_text mb-0">
+              Branding By @
+            </p>
+            <img src="assets/img/bhavi-logo/bhavi.png" class="img-fluid brand_image" alt="" style="width: 50px; height: 50px;">
+            </a>
+          </div>
+          </div>
+      </div>
+    </div>
 
     <!-- ENDING  MAIN SECTION -->
 </body>
