--- a/gallery.html
+++ b/gallery.html
@@ -263,25 +263,28 @@
   </footer>
 
    <!-- ENDING  FOOTER -->
-   <div class="footer-area-bottom theme-bg pt-3"  style="background-color: #00527E;">
+   <div class="footer-area-bottom theme-bg pt-3" style="background-color: #00527E;">
     <div class="container">
-       <div class="row">
-          <div class="col-xl-8 col-lg-8 col-md-12 col-12">
-             <div class="footer-widget__copyright" >
-                <span style="color:white;">  ©2023 Couple Clinic. <i>All Rights Reserved. Designed & Developed by <a href="https://bhavicreations.com/" target="_blank"  style="text-decoration: none ; color:white;">Bhavi Creations </a></i></span>
-             </div>
-          </div> 
-          <div class="col-xl-4 col-lg-4 col-md-12 col-12">
-             <div class="footer-widget__copyright-info info-direction">
-                <ul class="d-flex align-items-center">
-                   <li><a  style="text-decoration: none; color:white;" href="terms.html">Terms and conditions &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a></li>
-                   <li><a style="text-decoration: none; color:white;" href="privacy.html">Privacy policy</a></li>
-                 </ul>
-             </div>
-          </div>
-       </div>
+      <div class="row d-flex align-items-center">
+				<div class="col-md-6 col-12">
+				  <div class="footer-widget__copyright-info">
+					<p class="last_text mb-0">
+					  <a href="terms.html" style="text-decoration: none; color: #ffffff;">Terms & Conditions</a>
+					  <a href="privacy.html" style="text-decoration: none; color: #ffffff;">Privacy & Policy</a>
+					</p>
+				  </div>
+				</div>
+				<div class="col-md-6 col-12 d-flex justify-content-end align-items-center">
+				  <a href="https://bhavicreations.com/" target="_blank" style="text-decoration: none; color: #ffffff; display: flex; align-items: center;">
+					<p class="mini_text last_text mb-0">
+					  Branding By @
+					</p>
+					<img src="assets/img/bhavi-logo/bhavi.png" class="img-fluid brand_image" alt="" style="width: 50px; height: 50px;">
+				  </a>
+				</div>
+			  </div>
     </div>
-   </div>
+  </div>
 
   <!--  scroll down menu -->
   <div class="circle-icon-container">
