add remove the o-shot remove

--- a/command.html
+++ b/command.html
@@ -196,7 +196,7 @@ navbar home the main page navbar -->
                         <li><a href="femalenonsurgical.html#vaginal-discharge">Vaginal Discharge </a></li>
                         <li><a href="femalenonsurgical.html#post-delivery-rehabilitation"> Post Delivery Rehabilitation </a></li>
                         <li><a href="femalenonsurgical.html#g-shot">G-Shot </a></li>
-                        <li><a href="femalenonsurgical.html#o-shot"> O-Shot </a></li>
+                        <!-- <li><a href="femalenonsurgical.html#o-shot"> O-Shot </a></li> -->
                         <li><a href="femalenonsurgical.html#female-sexual-dysfunction">Female Sexual Dysfunction </a></li>
                         <li><a href="femalenonsurgical.html#laser-hair-reduction">Laser Hair Reduction</a></li>
                         <li> <a href="femalenonsurgical.html#bikini-laser-hair-removal"> Bikini Laser Hair Removal </a></li>
