--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -351,7 +351,7 @@
 
 <!-- O-SHOT -->
 
-<section id="o-shot_in_kakinada">
+<!-- <section id="o-shot_in_kakinada">
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">O-SHOT </h3>
@@ -373,7 +373,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <!--  ENDING  O-SHOT -->
 
