--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                           <li><a href="femalenonsurgical.html#post-delivery-rehabilitation_in_kakinada"> Post Delivery
                               Rehabilitation </a></li>
                           <li><a href="femalenonsurgical.html#g-shot_in_kakinada">G-Shot </a></li>
-                          <li><a href="femalenonsurgical.html#o-shot_in_kakinada"> O-Shot </a></li>
+                          <!-- <li><a href="femalenonsurgical.html#o-shot_in_kakinada"> O-Shot </a></li> -->
                           <li><a href="femalenonsurgical.html#female-sexual-dysfunction_in_kakinada">Female Sexual Dysfunction </a>
                           </li>
                           <li><a href="femalenonsurgical.html#laser-hair-reduction_in_kakinada">Laser Hair Reduction</a></li>
@@ -848,7 +848,7 @@
                           <li><a href="femalenonsurgical.html#post-delivery-rehabilitation"> Post Delivery <span
                                 class="ms-4 text-light">Rehabilitation</span> </a></li>
                           <li><a href="femalenonsurgical.html#g-shot">G-Shot </a></li>
-                          <li><a href="femalenonsurgical.html#o-shot"> O-Shot </a></li>
+                          <!-- <li><a href="femalenonsurgical.html#o-shot"> O-Shot </a></li> -->
                           <li><a href="femalenonsurgical.html#female-sexual-dysfunction">Female Sexual <span
                                 class="ms-4 text-light">Dysfunction</span> </a></li>
                           <li><a href="femalenonsurgical.html#laser-hair-reduction">Laser Hair Reduction</a></li>
