--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@
             <a class="nav-item nav-link mt-2 text-dark" href="contact.html" id="navlink6">
               <h5>Contact</h5>
             </a>
+             <a class="nav-item nav-link mt-2 text-dark" href="contact.html" id="navlink6">
+              <h5>Contact</h5>
+            </a>
           </div>
           <div class="col-6 ps-5">
             <a class="nav-item nav-link mt-2 text-dark" href="#" id="navlink6">
